refact: payment 리팩토링 및 장르별 수수료 계산 로직 추가